First commited as before_61842_rev1